# AegisAI-Intelligent-Emergency-Response-Urban-Intelligence-Platform

./: .gitignore  CMakeLists.txt  README.md
backend/include/controllers/: EmergencyController.h
backend/include/core/: ExceptionHandler.h  Logger.h  application.h  config.h
backend/include/models/: Citizen.h  Dispatcher.h  Emergency.h  Hospital.h  Route.h  Vehicle.h
backend/include/services/: DispatchService.h  EmergencyService.h  HospitalService.h  RouteService.h
backend/include/utils/: DateTime.h  FileManager.h
backend/src/: main.cpp
backend/src/controllers/: EmergencyController.cpp
backend/src/core/: ExceptionHandler.cpp  Logger.cpp  application.cpp  config.cpp
backend/src/models/: Citizen.cpp  Dispatcher.cpp  Emergency.cpp  Hospital.cpp  Route.cpp  Vehicle.cpp
backend/src/services/: DispatchService.cpp  EmergencyService.cpp  HospitalService.cpp  RouteService.cpp
backend/src/utils/: DateTime.cpp  FileManager.cpp
config/: settings.conf
docs/api/: API_ENDPOINTS.md
docs/architecture/: CLASS_RELATIONSHIPS.md  CLASS_RESPONSIBILITIES.md  DATABASE_DESIGN.md  HIGH_LEVEL_ARCHITECTURE.md  PROJECT_ROADMAP.md  PROJECT_VISION.md
docs/uml/: DOMAIN_MODEL.md  UML_CLASS_DIAGRAM.md
